Refactor the linkage between gadgets.
Remove the value provider service and create a new GadgetPipe object
(oh yeah, they're called Gadgets now, not transforms!) that connects
a Gadget's output to another Gadget's input.

Move some more logic out of app.dart and into a new workspace.dart
component.

The default assembly now has an input → md5 → md5.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,10 +6,10 @@ environment:
 
 dependencies:
   angular: '^4.0.0'
-  angular_forms: '^1.0.0'
   convert: '^2.0.1'
   crypto: '^2.0.2'
   logging: '^0.11.3'
+  uuid: '^0.5.3' # TODO remove?
 
 dev_dependencies:
   browser: ^0.10.0
