--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "@rollup/plugin-json": "^4.1.0",
+    "crypto-es": "^1.2.7",
+    "entities": "^2.2.0",
     "sirv-cli": "^1.0.0"
   }
 }
