--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "build": "rollup -c",
         "dev": "rollup -c -w",
+        "sitemap": "node src/buildSiteMap.js",
         "start": "sirv public --no-clear",
         "test": "mocha"
     },
@@ -22,6 +23,7 @@
         "rollup-plugin-polyfill-node": "^0.8.0",
         "rollup-plugin-svelte": "^7.0.0",
         "rollup-plugin-terser": "^7.0.0",
+        "sitemap": "^7.0.0",
         "svelte": "^3.0.0"
     },
     "dependencies": {
