--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "svelte-app",
     "type": "module",
-    "version": "1.0.0",
+    "version": "2021-12-26",
     "private": true,
     "scripts": {
         "build": "rollup -c",
