--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,8 @@ name: Deploy
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches:
+      - main
 
 jobs:
   deploy:
@@ -18,11 +19,10 @@ jobs:
       - run: npm ci
       - run: npm test
       - run: npm run build
-      - run: tar czf encoding-tools.tgz public/
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      - run: aws s3 sync --delete public s3://encoding.tools
+      - run: aws s3 sync --delete public/ s3://encoding.tools
       - run: aws cloudfront create-invalidation --distribution-id E1JTBRXJ5CWQ96 --paths '/*'
