--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,5 +24,6 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
       - run: aws s3 sync --delete public/ s3://encoding.tools
       - run: aws cloudfront create-invalidation --distribution-id E1JTBRXJ5CWQ96 --paths '/*'
